--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sgames",
+  "name": "prakashsgames",
   "version": "1.0.0",
   "description": "this is all about my node",
   "main": "index.js",
